Create and connect AdminDashboard

--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_NavBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_NavBar.cshtml
@@ -20,7 +20,7 @@
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a asp-action="Profile" asp-route-id="@user.Id" class="btn btn-primary ml-2">Profile</a>
+            @* <a asp-action="Profile" asp-route-id="@user.Id" class="btn btn-primary ml-2">Profile</a> *@
         </li>
         <li class="nav-item ml-2">
             <form method="post" asp-action="Logout">
