--- a/FM_MyStat.Web/Views/Admin/Index.cshtml
+++ b/FM_MyStat.Web/Views/Admin/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="content-wrapper">
+﻿@{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+}
+<div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
         <div class="container-fluid">
