Update login view

--- a/FM_MyStat.Web/Views/Login/Login.cshtml
+++ b/FM_MyStat.Web/Views/Login/Login.cshtml
@@ -1,15 +1,15 @@
 ﻿
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 <div class="login-box">
     <!-- /.login-logo -->
     <div class="card card-outline card-primary">
         <div class="card-header text-center">
-            <a href="../../index2.html" class="h1"><b>Admin</b>LTE</a>
+            <a href="../../index2.html" class="h1"><b>Mystat</b></a>
         </div>
         <div class="card-body">
-            <p class="login-box-msg">Sign in to TopNews</p>
+            <p class="login-box-msg">Sign in to MyStat</p>
             @if( ViewBag.AuthError  != null)
             {
                 <span class="text-danger">@ViewBag.AuthError</span>
@@ -32,16 +32,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-8">
-                        <div class="icheck-primary">
-                            <input type="checkbox" id="remember">
-                            <label for="remember">
-                                Remember Me
-                            </label>
-                        </div>
-                    </div>
                     <!-- /.col -->
-                    <div class="col-4">
+                    <div class="col-12">
                         <button type="submit" class="btn btn-primary btn-block">Sign In</button>
                     </div>
                     <!-- /.col -->
