--- a/FM_MyStat.Web/Views/Shared/_Layout.cshtml.css
+++ b/FM_MyStat.Web/Views/Shared/_Layout.cshtml.css
@@ -44,3 +44,7 @@ button.accept-policy {
     white-space: nowrap;
     line-height: 60px;
 }
+
+body {
+    background-image: url(../../wwwroot/laptop.jpg)
+}
