--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_NavBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_NavBar.cshtml
@@ -23,7 +23,7 @@
             @* <a asp-action="Profile" asp-route-id="@user.Id" class="btn btn-primary ml-2">Profile</a> *@
         </li>
         <li class="nav-item ml-2">
-            <form method="post" asp-action="Logout">
+            <form method="post" asp-controller="Admin" asp-action="LogOut">
                 <button class="btn btn-primary" type="submit">Log out</button>
             </form>
         </li>
