Add page GetAll for Admins

--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -45,7 +45,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a asp-controller="Dashboard"  asp-action="GetAll" class="nav-link">
+                            <a asp-controller="Admin"  asp-action="GetAll" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>All admins</p>
                             </a>
