Start Create Admin

--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -53,7 +53,7 @@
                          
                         
                         <li class="nav-item">
-                            <a asp-controller="Dashboard" asp-action="AddNew" class="nav-link">
+                            <a asp-controller="Admin" asp-action="Create" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Add new admin</p>
                             </a>
