--- a/FM_MyStat.Web/Views/Subject/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Subject/Edit.cshtml
@@ -1,5 +1,83 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using FM_MyStat.Core.DTOs.SubjectsDTO;
+@model SubjectDTO;
+
 @{
+    ViewData["Title"] = "Subject";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1>Subject managament</h1>
+                </div>
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a asp-controller="Admin" asp-action="Index">Home</a></li>
+                        <li class="breadcrumb-item active">Edit subject</li>
+                    </ol>
+                </div>
+            </div>
+        </div><!-- /.container-fluid -->
+    </section>
+
+    <!-- Main content -->
+    <section class="content">
+        <div class="container-fluid">
+            <!-- SELECT2 EXAMPLE -->
+            <div class="card card-default">
+                <div class="card-header">
+                    <h3 class="card-title">Edit subject</h3>
+
+                    <div class="card-tools">
+                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                        <button type="button" class="btn btn-tool" data-card-widget="remove">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-5 offset-3">
+                            <div class="card card-warning">
+                                <div class="card-header">
+                                    <h3 class="card-title">Update category</h3>
+                                </div>
+                                <!-- /.card-header -->
+                                <!-- form start -->
+                                @if (@ViewBag.AuthError != null)
+                                {
+                                    <span class="text-danger mt-3">@ViewBag.AuthError</span>
+                                }
+                                <form method="post" asp-controller="Subject" asp-action="Edit">
+                                    <div class="card-body">
+                                        <div class="form-group">
+                                            <label>Subject</label>
+                                            <input type="text" asp-for="Name" name="name" class="form-control" placeholder="Subject name">
+                                            <span class="text-danger" asp-validation-for="Name"></span>
+                                        </div>
+                                    </div>
+                                    <!-- /.card-body -->
+                                    <div class="card-footer">
+                                        <button type="submit" class="btn btn-warning">Update</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container-fluid -->
+    </section>
+    <!-- /.content -->
+</div>
