Start CRUD for student

--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -96,7 +96,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a asp-controller="Dashboard" asp-action="GetAll" class="nav-link">
+                            <a asp-controller="Student" asp-action="GetAll" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>All students</p>
                             </a>
@@ -104,7 +104,7 @@
                          
                         
                             <li class="nav-item">
-                                <a asp-controller="Dashboard" asp-action="AddNew" class="nav-link">
+                            <a asp-controller="Student" asp-action="Create" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Add new student</p>
                                 </a>
