--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -164,6 +164,32 @@
                         
                     </ul>
                 </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Group
+                            <i class="fas fa-angle-left right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a asp-controller="Group" asp-action="GetAll" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>All Group</p>
+                            </a>
+                        </li>
+
+
+                        <li class="nav-item">
+                            <a asp-controller="Group" asp-action="Create" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Add Group</p>
+                            </a>
+                        </li>
+
+                    </ul>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
