--- a/FM_MyStat.Web/Views/Group/Update.cshtml
+++ b/FM_MyStat.Web/Views/Group/Update.cshtml
@@ -1,9 +1,9 @@
 ﻿@using FM_MyStat.Core.DTOs.GrouopsDTO;
-@model GroupDTO;
+@model EditGroupDTO;
 
 @{
     ViewData["Title"] = "Group";
-    //Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <!-- Content Wrapper. Contains page content -->
