--- a/FM_MyStat.Web/Views/Login/ForgotPassword.cshtml
+++ b/FM_MyStat.Web/Views/Login/ForgotPassword.cshtml
@@ -8,7 +8,7 @@
             <a class="h1"><b>MyStat</b></a>
         </div>
         <div class="card-body">
-            <p class="login-box-msg">Sign in to TopNews</p>
+            <p class="login-box-msg">Forgot password</p>
             @if (ViewBag.AuthError != null)
             {
                 <span class="text-danger">@ViewBag.AuthError</span>
