Fix create lesson view

--- a/FM_MyStat.Web/Views/Shared/TeacherDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/TeacherDashboard/_SideBar.cshtml
@@ -111,14 +111,14 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a asp-controller="Post" asp-action="Index" class="nav-link">
+                            <a asp-controller="Lesson" asp-action="GetAll" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>All lessons</p>
                             </a>
                         </li>
 
                         <li class="nav-item">
-                            <a asp-controller="Post" asp-action="AddPost" class="nav-link">
+                            <a asp-controller="Lesson" asp-action="Create" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Add new lesson</p>
                             </a>
