--- a/FM_MyStat.Web/Views/Lesson/Create.cshtml
+++ b/FM_MyStat.Web/Views/Lesson/Create.cshtml
@@ -57,6 +57,7 @@
                                     <div class="card-body">
                                         <div class="form-group">
                                             <label for="lessonName">Lesson name</label>
+                                            <input type="hidden" class="form-control" name="TeacherId" id="TeacherId" value="@ViewBag.IdTeacher" />
                                             <input type="text" name="Name" class="form-control" id="lessonName" placeholder="Lesson name">
                                         </div>
                                         <div class="form-group">
