--- a/FM_MyStat.Web/Views/Lesson/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Lesson/Edit.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@using FM_MyStat.Core.DTOs.LessonsDTO.Lessons;
+@model LessonDTO;
+
+@{
+    ViewData["Title"] = "Subject";
     Layout = "~/Views/Shared/_TeacherLayout.cshtml";
 }
-@using FM_MyStat.Core.DTOs.LessonsDTO.Lessons;
-@model CreateLessonsDTO
+
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -10,12 +13,12 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>User managament</h1>
+                    <h1>Lesson managament</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a asp-action="Index">Home</a></li>
-                        <li class="breadcrumb-item active">Asign lesson</li>
+                        <li class="breadcrumb-item"><a asp-controller="Admin" asp-action="Index">Home</a></li>
+                        <li class="breadcrumb-item active">Edit lesson</li>
                     </ol>
                 </div>
             </div>
@@ -28,7 +31,7 @@
             <!-- SELECT2 EXAMPLE -->
             <div class="card card-default">
                 <div class="card-header">
-                    <h3 class="card-title">Create lesson</h3>
+                    <h3 class="card-title">Edit subject</h3>
 
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse">
@@ -43,34 +46,34 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-5 offset-3">
-                            <div class="card card-primary">
+                            <div class="card card-warning">
                                 <div class="card-header">
-                                    <h3 class="card-title">New teacher</h3>
+                                    <h3 class="card-title">Update lesson</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
-                                @if (@ViewBag.CreateLessonError != null)
+                                @if (@ViewBag.AuthError != null)
                                 {
-                                    <span class="text-danger mt-3">@ViewBag.CreateLessonError</span>
+                                    <span class="text-danger mt-3">@ViewBag.AuthError</span>
                                 }
-                                <form method="post" asp-action="Create">
+                                <form method="post" asp-controller="Lesson" asp-action="Edit">
                                     <div class="card-body">
                                         <div class="form-group">
                                             <label for="lessonName">Lesson name</label>
                                             <input type="hidden" class="form-control" name="TeacherId" id="TeacherId" value="@ViewBag.IdTeacher" />
-                                            <input type="text" name="Name" class="form-control" id="lessonName" placeholder="Lesson name">
+                                            <input type="text" asp-for="Name" name="name" class="form-control" placeholder="Lesson name">
                                         </div>
                                         <div class="form-group">
                                             <label for="lessonDescription">Description</label>
-                                            <input type="text" name="Description" class="form-control" id="lessonDescription" placeholder="Description">
+                                            <input type="text" asp-for="Description" name="description" class="form-control" placeholder="Description">
                                         </div>
                                         <div class="form-group">
                                             <label for="lessonStart">Start Date</label>
-                                            <input type="datetime-local" name="Start" class="form-control" id="lessonStart">
+                                            <input type="datetime-local" asp-for="Start" name="start" class="form-control">
                                         </div>
                                         <div class="form-group">
                                             <label for="lessonEnd">End Date</label>
-                                            <input type="datetime-local" name="End" class="form-control" id="lessonEnd">
+                                            <input type="datetime-local" asp-for="End" name="end" class="form-control">
                                         </div>
                                         <div class="mb-3">
                                             <div class="form-group">
@@ -78,16 +81,16 @@
                                                 @Html.DropDownList("GroupId", (SelectList)ViewBag.GroupList, "-- Select Group --",  htmlAttributes: new { @class = "form-control" })
                                             </div>
                                         </div>
-                                            <div class="mb-3">
-                                                <div class="form-group">
-                                            <label>Subject ID</label>
+                                        <div class="mb-3">
+                                            <div class="form-group">
+                                                <label>Subject ID</label>
                                                 @Html.DropDownList("SubjectId", (SelectList)ViewBag.SubjectList, "-- Select Subject --",  htmlAttributes: new { @class = "form-control" })
-                                        </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <!-- /.card-body -->
                                     <div class="card-footer">
-                                        <button type="submit" class="btn btn-primary">Create</button>
+                                        <button type="submit" class="btn btn-primary">Edit</button>
                                     </div>
                                 </form>
                             </div>
