Added lesson deletion

--- a/FM_MyStat.Web/Views/Lesson/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Lesson/Edit.cshtml
@@ -2,7 +2,7 @@
 @model LessonDTO;
 
 @{
-    ViewData["Title"] = "Subject";
+    ViewData["Title"] = "Lesson";
     Layout = "~/Views/Shared/_TeacherLayout.cshtml";
 }
 
