--- a/FM_MyStat.Web/Views/Shared/StudentDashboard/_NavBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/StudentDashboard/_NavBar.cshtml
@@ -1,9 +1,12 @@
 ﻿@using FM_MyStat.Core.Entities.Users;
+@using FM_MyStat.Web.Models.ViewModels.Student;
 @using Microsoft.AspNetCore.Identity;
+
 @inject UserManager<AppUser> UserManager
 
 @{
     var user = await UserManager.GetUserAsync(User);
+    var dashboardInfo = new DashboardStudentInfo();  // МЕТОД ДОБАВАТИ СЄРОМУ !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 }
 <!-- Navbar -->
 <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -19,9 +22,16 @@
 
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            @* <a asp-action="Profile" asp-route-id="@user.Id" class="btn btn-primary ml-2">Profile</a> *@
+        <li class="nav-item ml-2">
+            <span class="nav-link">Welcome, @dashboardInfo.StudentInfo.FirstName @dashboardInfo.StudentInfo.SurName @dashboardInfo.StudentInfo.LastName</span>
         </li>
+        <li class="nav-item ml-2">
+            <span class="nav-link">Group: @dashboardInfo.Group</span>
+        </li>
+        <li class="nav-item ml-2">
+            <span class="nav-link">Points: @dashboardInfo.RatingGroup</span>
+        </li>
+
         <li class="nav-item ml-2">
             <form method="post" asp-controller="Teacher" asp-action="LogOut">
                 <button class="btn btn-primary" type="submit">Log out</button>
@@ -29,4 +39,3 @@
         </li>
     </ul>
 </nav>
-<!-- /.navbar -->
