--- a/FM_MyStat.Web/Views/Shared/StudentDashboard/_NavBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/StudentDashboard/_NavBar.cshtml
@@ -29,7 +29,7 @@
             <span class="nav-link">Group: @dashboardInfo.Group</span>
         </li>
         <li class="nav-item ml-2">
-            <span class="nav-link">Points: @dashboardInfo.RatingGroup</span>
+            <span class="nav-link">Points: @dashboardInfo.StudentInfo.Rating ★</span>
         </li>
 
         <li class="nav-item ml-2">
