--- a/FM_MyStat.Web/Views/Student/Index.cshtml
+++ b/FM_MyStat.Web/Views/Student/Index.cshtml
@@ -1,6 +1,18 @@
-﻿@{
-    Layout = "~/Views/Shared/_TeacherLayout.cshtml";
+﻿@using FM_MyStat.Core.Entities.Users;
+@using FM_MyStat.Web.Models.ViewModels.Student;
+@using Microsoft.AspNetCore.Identity;
+@{
+    Layout = "~/Views/Shared/_StudentLayout.cshtml";
 }
+@model DashboardStudentInfo;
+@inject UserManager<AppUser> UserManager
+
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
+
+
+
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
@@ -19,53 +31,101 @@
         </div><!-- /.container-fluid -->
     </div>
 
-    <div class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="card">
-                        <div class="card-header border-0">
-                            <div class="d-flex justify-content-between">
-                                <h3 class="card-title">Online Store Visitors</h3>
-                                <a href="javascript:void(0);">View Report</a>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <div class="d-flex">
-                                <p class="d-flex flex-column">
-                                    <span class="text-bold text-lg">820</span>
-                                    <span>Visitors Over Time</span>
-                                </p>
-                                <p class="ml-auto d-flex flex-column text-right">
-                                    <span class="text-success">
-                                        <i class="fas fa-arrow-up"></i> 12.5%
-                                    </span>
-                                    <span class="text-muted">Since last week</span>
-                                </p>
-                            </div>
-                            <!-- /.d-flex -->
+    <div class="container mt-4">
+        <h1>Student Dashboard</h1>
+        <hr>
 
-                            <div class="position-relative mb-4">
-                                <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                                <canvas id="visitors-chart" height="250" width="715" style="display: block; height: 200px; width: 572px;" class="chartjs-render-monitor"></canvas>
+        <!-- Rating -->
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Your Rating</h4>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div>
+                                <p class="card-text mb-1">Your place in the group:</p>
+                                <h2 class="font-weight-bold">@Model.RatingGroup</h2>
                             </div>
-
-                            <div class="d-flex flex-row justify-content-end">
-                                <span class="mr-2">
-                                    <i class="fas fa-square text-primary"></i> This Week
-                                </span>
-
-                                <span>
-                                    <i class="fas fa-square text-gray"></i> Last Week
-                                </span>
+                            <div class="bg-primary text-white rounded-circle p-3">
+                                <i class="fas fa-trophy fa-3x"></i>
                             </div>
                         </div>
                     </div>
-                    <!-- /.card -->
                 </div>
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
+
+        <!-- List of Students -->
+        <div class="row mt-4">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Group Rating</h4>
+                        <div class="list-group">
+                            @foreach (var student in Model.RatingList)
+                            {
+                                <a href="#" class="list-group-item list-group-item-action">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div>
+                                            <h5 class="mb-1">@student.FirstName @student.SurName @student.LastName</h5>
+                                            <p class="mb-0">Rating: @student.Rating</p>
+                                        </div>
+                                        <span class="badge badge-primary badge-pill">@student.Rating ★</span>
+                                    </div>
+                                </a>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Homeworks Info</h4>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h6 class="card-subtitle mb-2 text-muted">Checked</h6>
+                                        <p class="card-text">@Model.HomeworksChecked</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h6 class="card-subtitle mb-2 text-muted">Current</h6>
+                                        <p class="card-text">@Model.HomeworksCurrent</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h6 class="card-subtitle mb-2 text-muted">On Inspection</h6>
+                                        <p class="card-text">@Model.HomeworksOnInspection</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h6 class="card-subtitle mb-2 text-muted">Overdue</h6>
+                                        <p class="card-text">@Model.HomeworksOverdue</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
