--- a/FM_MyStat.Web/Views/Homework/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Homework/GetAll.cshtml
@@ -1,13 +1,20 @@
 ﻿@using FM_MyStat.Core.DTOs.HomeworksDTO.Homework;
+@using FM_MyStat.Core.Entities.Users;
+@using Microsoft.AspNetCore.Identity;
 @model List<HomeworkDTO>
-
+@inject UserManager<AppUser> UserManager
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
 
 @{
     ViewData["Title"] = "Homework";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_TeacherLayout.cshtml";
+}
+
+@{
+    var user = await UserManager.GetUserAsync(User);
+    //var email = await UserManager.GetEmailAsync(user);
 }
 
 <div class="content-wrapper">
@@ -44,11 +51,6 @@
                                         <th>Description</th>
                                         <th>Group</th>
                                         <th>Lesson</th>
-                                        @if (@User.IsInRole("Administrator"))
-                                        {
-                                            <th>Edit</th>
-                                            <th>Delete</th>
-                                        }
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -60,11 +62,8 @@
                                             <td>@item.Description</td>
                                             <td>@item.Group</td>
                                             <td>@item.Lesson</td>
-                                            @if (@User.IsInRole("Administrator"))
-                                            {
-                                                <td><a asp-controller="Homework" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
-                                                <td><a asp-controller="Homework" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-block btn-danger btn-sm">Delete</a></td>
-                                            }
+                                            <td><a asp-controller="Homework" asp-action="Update" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
+                                            <td><a asp-controller="Homework" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-block btn-danger btn-sm">Delete</a></td>
                                         </tr>
                                     }
                                 </tbody>
