--- a/FM_MyStat.Web/Views/Homework/Update.cshtml
+++ b/FM_MyStat.Web/Views/Homework/Update.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Homework";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_TeacherLayout.cshtml";
 }
 
 <!-- Content Wrapper. Contains page content -->
@@ -56,12 +56,28 @@
                                 {
                                     <span class="text-danger mt-3">@ViewBag.AuthError</span>
                                 }
-                                <form method="post" asp-controller="Homework" asp-action="Edit">
+                                <form method="post" asp-controller="Homework" asp-action="Update">
                                     <div class="card-body">
                                         <div class="form-group">
                                             <label>Homework</label>
                                             <input type="text" asp-for="Title" name="title" class="form-control" placeholder="Homework title">
                                             <span class="text-danger" asp-validation-for="Title"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="description">Description</label>
+                                            <input type="text" name="description" class="form-control" id="description" placeholder="Enter Description">
+                                        </div>
+                                        <div class="mb-3">
+                                            <div class="form-group">
+                                                <label>Group</label>
+                                                @Html.DropDownList("GroupId", (SelectList)ViewBag.GroupList, "-- Select Group --",  htmlAttributes: new { @class = "form-control" })
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <div class="form-group">
+                                            <label>Lesson ID</label>
+                                            @Html.DropDownList("LessonId", (SelectList)ViewBag.LessonList, "-- Select Lesson --",  htmlAttributes: new { @class = "form-control" })
                                         </div>
                                     </div>
                                     <!-- /.card-body -->
